--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "@expo/metro-runtime": "~3.2.3",
     "@firebase/auth": "^1.8.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/netinfo": "^11.3.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "date-fns": "^4.1.0",
-    "expo": "~51.0.38",
+    "expo": "~51.0.39",
     "expo-av": "^14.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-status-bar": "~1.12.1",
