--- a/app.json
+++ b/app.json
@@ -1,13 +1,13 @@
 {
   "expo": {
-    "name": "EasyEarn",
+    "name": "QuizMaster",
     "slug": "EasyEarn",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon/appIcon.png",
+    "icon": "./assets/icon/QuizMaster-2.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/icon/splash.png",
+      "image": "./assets/icon/splash-2.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -16,12 +16,12 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/icon/QuizMaster-2.png",
         "backgroundColor": "#ffffff"
       }
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/icon/fav.png"
     }
   }
 }
